fix(rux-button): implement spacing tokens and align to Astro 7.0 design

--- a/packages/web-components/src/components/rux-button-group/rux-button-group.scss
+++ b/packages/web-components/src/components/rux-button-group/rux-button-group.scss
@@ -9,7 +9,7 @@
 .rux-button-group {
     display: flex;
     ::slotted(rux-button:not(:last-child)) {
-        margin-right: 0.625rem;
+        margin-right: var(--spacing-2);
     }
 
     &--left {
